<resources>
    <string name="app_name">BAU News</string>
    <string name="todo">TODO</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forget_password">forget password ?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="college">Collage News</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sing_up">sign up</string>
    <string name="already_have_an_account">already have an account?</string>
    <string name="sing_in">sign in</string>
    <string name="field_cannot_be_empty">Field can\'t be empty</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="password_is_too_weak">Password is too weak</string>
    <string name="title">Title</string>
    <string name="now">Now</string>
    <string name="description">Greyhound divisively hello coldly wonderfully marginally far upon</string>
    <string name="password_matching">Password isn\'t match</string>
    <string name="select_collage_error">You should select your collage</string>
    <string name="verify_dialog_msg">Your account isn\'t verified yet !</string>
    <string name="send_verification_link">Send Verification Link</string>
    <string name="incorrect_password">Incorrect Password</string>
    <string name="email_address_not_register">Email Address Not Registered</string>
    <string name="general">General News</string>
    <string name="settings">Settings</string>
    <string name="log_out">Logout</string>
    <string name="reset_password">reset_password</string>
    <string name="news">News</string>
    <string name="add_others">Add Others</string>
    <string name="add_image">add image</string>
    <string name="add_url">add URL</string>
    <string name="add_file">add File</string>
    <string name="type_description_here">type description here</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="enter_url">Enter Url</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="language">Language</string>
    <string name="darkmode">Dark Mode</string>
    <string name="change_language">Changing language</string>
    <string name="loading">Loading..</string>
    <string name="bau_about">About university</string>
    <string name="about_bau">\n<font color="#02a951" size="25">History and Background</font>
    \n\n
     Al-Balqa Applied University (BAU) is a state university founded by royal decree on the 22nd of August 1996. Teaching at the university commenced in the academic year 1997/1998. The university offers 11 MA and 52 BA programs in addition to 117 intermediate university programs. BAU comprises of 6 faculties on its main campus in Salt City, and 12 university colleges as satellite campuses across the kingdom. The university also oversees the 51 private and public community colleges in Jordan.
     BAU’s main focus is on providing quality applied technical education through inspirational teaching and world-class research. Consequently, BAU graduates are able to compete in local, regional and international markets.
    \n\n
        <font color="#02a951" size="25">Vision</font>
    \n\n
     A scientifically leading and globally competing applied university, distinguished in creativity, innovation, applied scientific research and leadership for the purpose of compounding knowledge economy and society.
    \n\n
    <font color="#02a951" size="25">Mission</font>
    \n\n
     Providing high quality applied and technical education, and furnishing competitive, incubating and stimulating environment for innovation, creativity, research, development and leadership in order to contribute to attaining sustainable development and knowledge economy.
    \n\n
    <font color="#02a951" size="25">Our Core Values</font>
    \n\n
    - Academic Freedom
    \n
    - Integrity, Justice and the Rule of law
    \n
    - Equal Opportunities
    \n
    - Community Service
    \n
    - Neutrality
    \n
    - Cooperation with our stakeholders
    \n
    - Teamwork Spirit
    \n
    - Dialogue, Pursuit of Excellence and Prompt Responsiveness to Challenges
    \n\n
        <font color="#02a951" size="25">Programs and Degrees</font>
    \n\n
     The university offers term-study programs according to the Credit Hours System.
    Upon recognition obtained from the Council of Higher Education in Jordan, Association of Arab Universities, International Association of universities, and international academic commissions, BAU awards the following academic degrees:
    \n
    - the Master\'s degree \n
    - the Bachelor\'s degree \n
    - Associate Diploma \n
    - Higher Vocational Diploma\n </string>
    <string name="royal_letter">
        \n
    In the name of God, the most merciful, the most compassionate,
    May the peace and blessing of Allah be upon you,
    \n\n
         Jordan\’s higher education institutions, as you all know, constitute a comprehensive educational system tasked with providing Jordanians with quality higher education that is capable of equipping both undergraduate and intermediate university graduates with the necessary academic and professional skills to meet Jordan\’s evolving needs. That being said, our region is witnessing a number of emerging economic and political challenges that are bound to affect both Jordan and the region\’s present and future socioeconomic makeup. These changes bring forth new demands and expectations in terms of Jordan\’s ability to prepare its human resources in the different fields. Consequently, there is an urgent need to reconsider our future educational inputs in a manner that enables our educational system to meet the challenges ahead with confidence, and propel our society into further growth and progress.
    \n\n
         In view of this, and the predicted changes to public institutions\’ structure and makeup, it is my hope that an applied university be founded in the Hashemite Kingdom of Jordan to further bolster Jordan\’s higher education philosophy, meet the demands of those upcoming challenges, and pave the way to new educational models in line with our modern Jordanian society.
    \n\n
         The proposed university will be a valuable addition to existing higher education institutions and its establishment now responds to the requirements of this current stage.
    \n\n
         First: The founding of an applied university with specific focus on intermediate college education will provide direct supervision over the existing community colleges and will ensure that academic, professional and applied standards are applied and maintained. It will also facilitate further education under more favorable financial conditions for accomplished graduates whose socioeconomic backgrounds would have impeded their studies. Furthermore, it will provide those students with high potential with the opportunity to receive quality vocational and applied training and enable them to contribute actively in their societies.
    \n\n
         Second: The founding of an applied university provides community colleges with sound leadership that is focused on applied and vocational training. This in turn, will not only reform applied and vocational training and education, but also raise its profile. Furthermore, a sound academic leadership will address and remedy the numerous issues that have plagued and hindered applied and vocational training and education colleges from meeting their goals so far, including administrative and organizational issues.
    \n\n
         Third: The founding of an applied university that works to reform community colleges will eliminate the need to close these colleges down, particularly at a time where maintaining the current status quo would incur great academic, economic and administrative hardship, and negatively affect their education outputs.
    \n\n
         Fourth: The founding of an applied university realizes the concept of sustainable education and offers flexible and advanced models to connect and streamline its different levels. Furthermore, it democratizes education as guaranteed in the Jordanian constitution, and encourages large student enrollment. It also reduces pressure on other state universities which in turn will improve the quality of education, scientific research and community service.
    \n\n
         In view of this, and the rationale and need to respond to the national, regional and international challenges at the political, socio-economic and educational fields, the creation of an applied university in Jordan becomes a necessity that needs to be fully examined by a competent expert committee to ensure that it comes to fruition. Al-Salt city’s pioneering academic role and its rich history make it the ideal location for the establishment of this university. The university will reinforce the city\’s role celebrate its rich heritage, honor the memory of the city\’s pioneering graduates and link its glorious past to what we pray will be its bright and productive future. We have decided that his Highness Prince Ghazi bin Mohammad chair the Board of trustees, and we wish him and its members all success in their task.
    \n\n\n\n


    May the peace and blessing of Allah be upon you,\n
    Your brother, Al-Hussein,\n
    Amman 7th of Rabi II 1417 A.H.,\n
    corresponding to 22nd August 1996.\n
    </string>
    <string name="choose_where_to_share">Choose where to share:</string>
    <string name="share">Share</string>
    <string name="cancel_">Cancel</string>
    <string name="remove">Remove</string>
    <string name="you_are_going_to_remove_this_email_from_admin_list_are_you_sure">You are going to remove this email from admin list, are you sure ?</string>
</resources>