<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/news">
        <menu android:checkableBehavior="single">
            <item
                android:id="@+id/general_news"
                android:checkable="true"
                android:icon="@drawable/bau"
                android:title="@string/general" />
            <item
                android:id="@+id/college_news"
                android:checkable="true"
                android:icon="@drawable/ic_college"
                android:title="@string/college" />

        </menu>
    </item>

    <item android:title="@string/about_bau" android:id="@+id/about_news" android:icon="@drawable/ic_about"/>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/settings_news"
            android:checkable="true"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/log_out" />
    </group>

</menu>