<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10sdp"
    android:clickable="true"
    android:elevation="@dimen/_10sdp"
    android:padding="@dimen/_5sdp"
    app:cardBackgroundColor="@color/mainColor"
    app:cardCornerRadius="@dimen/_15sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_3sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/news_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_weight="1"
                android:fontFamily="@font/bold"
                android:text="@string/title"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp" />

            <TextView
                android:id="@+id/news_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_weight="3"
                android:fontFamily="@font/medium"
                android:text="@string/now"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/white" />

        <ImageView
            android:id="@+id/news_img"
            android:layout_width="@dimen/_300sdp"
            android:layout_height="@dimen/_300sdp"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_3sdp"
            android:contentDescription="@string/todo"
            android:src="@drawable/bau" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/white" />

        <TextView
            android:id="@+id/news_description"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="start"
            android:layout_margin="@dimen/_3sdp"
            android:fontFamily="@font/regular"
            android:text="@string/description"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>