<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginRight="@dimen/_10sdp"
    android:layout_marginLeft="@dimen/_10sdp"
    android:layout_gravity="center"
    android:id="@+id/layout_share_container"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/dialog_bg">
    <ImageView
        android:id="@+id/share_img"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:src="@drawable/ic_share"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />
    <TextView
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_where_to_share"
        android:fontFamily="@font/medium"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@id/share_img"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@id/txt"
        android:entries="@array/share_names"/>

    <TextView
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:text="@string/share"
        android:textColor="@color/colorButtonText"
        android:textSize="@dimen/_15sdp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:text="@string/cancel_"
        android:textColor="@color/colorButtonText"
        android:textSize="@dimen/_15sdp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/share"
        app:layout_constraintTop_toBottomOf="@id/spinner" />


</androidx.constraintlayout.widget.ConstraintLayout>